# imshow

./: .gitignore  LICENSE  Makefile  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
examples/: countdown_plugin.py  mark.txt
imgviz_cli/imshow/: __main__.py
imgviz_cli/imshow/plugins/: base.py  imread.py  tile.py
imgviz_cli/utils/: paths.py
imshow/: __init__.py  __main__.py  _args.py  _generators.py  _imshow.py  _pyglet.py
imshow/plugins/: __init__.py  base.py  mark.py  tile.py
imshow/utils/: __init__.py
