[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "imshow"
description = "Flexible and Customizable Image Display"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" },
]
keywords = [
  "image",
  "visualization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "imgviz",
  "pyglet",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
test = [
  "mypy",
  "types-Pillow",
  "pytest",
  "ruff",
  "twine",
]

[project.urls]
Homepage = "https://github.com/wkentaro/imshow"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "imshow/_version.py"
template = '''
__version__ = "{version}"
'''

[project.scripts]
imshow = "imshow:__main__.main"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  ".conda",
  ".git",
  "src",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`).
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.isort]
force-single-line = true
