[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "imshow"
description = "Flexible and Customizable Image Display"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" },
]
keywords = [
  "image",
  "visualization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "imgviz~=1.7.5",
  "pyglet~=1.5.31",
]
dynamic = ["readme", "version"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.10",
  "twine>=6.2.0",
  "ty>=0.0.7",
  "types-pillow>=10.2.0.20240822",
]

[project.urls]
Homepage = "https://github.com/wkentaro/imshow"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.version]
source = "vcs"

[project.scripts]
imshow = "imshow:__main__.main"

[tool.ruff]
exclude = [
  ".conda",
  ".git",
  "src",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`).
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
