[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "imshow"
description = "Flexible and Customizable Image Display"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" },
]
keywords = [
  "image",
  "visualization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "imgviz~=1.7.5",
  "pyglet~=1.5.31",
]
dynamic = ["readme", "version"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.10",
  "twine>=6.2.0",
  "ty>=0.0.7",
  "types-pillow>=10.2.0.20240822",
]

[project.urls]
Homepage = "https://github.com/wkentaro/imshow"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.version]
source = "vcs"

[project.scripts]
imshow = "imshow:__main__.main"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
